--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -6,9 +6,9 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
-  workflow_dispatch:
-  schedule:
-    - cron: "0 0 * * *" # Every day at midnight
+#   workflow_dispatch:
+#   schedule:
+#     - cron: "0 0 * * *" # Every day at midnight
 
 jobs:
   build:
